--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,8 +37,14 @@ version = "0.1.39"
 default-features = false
 
 [dependencies.num-traits]
-version = "0.2.4"
+git = "https://github.com/stichtingorganism/num-traits" 
+# version = "0.2.4"
 default-features = false
+
+[dependencies.num-iter]
+version = "0.1.37"
+default-features = false
+
 
 [dependencies.rand]
 optional = true
@@ -54,6 +60,13 @@ features = ["std"]
 
 [dev-dependencies.serde_test]
 version = "1.0"
+
+[dependencies.lazy_static]
+version = "1.2.0"
+
+[dependencies.byteorder]
+version = "1.2.7"
+
 
 [features]
 default = ["std", "i128", "u64_digit"]
