--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["The Rust Project Developers"]
+authors = ["dignifiedquire <dignifiedquire@gmail.com>", "organism <hello@organism.ai>"]
 description = "Big integer implementation for Rust"
 documentation = "https://docs.rs/num-bigint"
 homepage = "https://github.com/rust-num/num-bigint"
