--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 authors = ["dignifiedquire <dignifiedquire@gmail.com>", "organism <hello@organism.ai>"]
 description = "Big integer implementation for Rust"
-documentation = "https://docs.rs/num-bigint"
-homepage = "https://github.com/rust-num/num-bigint"
+documentation = "https://docs.rs/num-bigint-dig"
+homepage = "https://github.com/dignifiedquire/num-bigint"
 keywords = ["mathematics", "numerics", "bignum"]
 categories = [ "algorithms", "data-structures", "science" ]
 license = "MIT/Apache-2.0"
