Enable the alloc feature of serde

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ optional = true
 optional = true
 version = "1.0"
 default-features = false
+features = [ "alloc" ]
 
 [dependencies.libm]
 version = "0.2.1"
