--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,9 @@ autobenches = false
 [package.metadata.docs.rs]
 features = ["std", "serde", "rand", "prime"]
 
-[dependencies]
+[dependencies.arbitrary]
+version = "1.1.0"
+optional = true
 
 [dependencies.smallvec]
 version = "1.0.0"
@@ -82,6 +84,7 @@ version = "1.0"
 
 [features]
 default = ["std", "u64_digit"]
+fuzz = ["arbitrary", "smallvec/arbitrary"]
 i128 = []
 std = [
     "num-integer/std",
